ecmascript/parser/tests/typescript-errors/issue-1170-1/input.ts.stderr
error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/issue-1170-1/input.ts:1:24
  |
1 | const toString: (local)(this: Function) => string) = undefined;
  |                        ^

error: Not a pattern
 --> $DIR/tests/typescript-errors/issue-1170-1/input.ts:1:25
  |
1 | const toString: (local)(this: Function) => string) = undefined;
  |                         ^^^^

error: Expected ,, got :
 --> $DIR/tests/typescript-errors/issue-1170-1/input.ts:1:29
  |
1 | const toString: (local)(this: Function) => string) = undefined;
  |                             ^

