ecmascript/parser/tests/typescript-errors/issue-1170-1/input.ts
const toString: (local)(this: Function) => string) = undefined;
